--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required properties
-sonar.projectKey=WEATHERAPP
-sonar.projectName=WEATHERAPP
+sonar.projectKey=WEATHERAPP-2
+sonar.projectName=WEATHERAPP-2
 sonar.projectVersion=1.0
 sonar.sources=weatherapp
 # sonar.language=java
