--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -57,22 +57,22 @@ pipeline {
             }
         }
 
-        stage('SonarQube analysis') {
-            agent {
-                docker {
-                    image 'sonarsource/sonar-scanner-cli:4.7.0'
-                }
-            }
-            environment {
-                CI = 'true'
-                scannerHome='/opt/sonar-scanner'
-            }
-            steps {
-                withSonarQubeEnv('SonarQube') {
-                    sh "${scannerHome}/bin/sonar-scanner"
-                }
-            }
-        }
+        // stage('SonarQube analysis') {
+        //     agent {
+        //         docker {
+        //             image 'sonarsource/sonar-scanner-cli:4.7.0'
+        //         }
+        //     }
+        //     environment {
+        //         CI = 'true'
+        //         scannerHome='/opt/sonar-scanner'
+        //     }
+        //     steps {
+        //         withSonarQubeEnv('SonarQube') {
+        //             sh "${scannerHome}/bin/sonar-scanner"
+        //         }
+        //     }
+        // }
 
     }
 }
