--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -74,5 +74,14 @@ pipeline {
             }
         }
 
+        stage('Quality Gate Check') {
+            steps {
+                // Check SonarQube analysis results against quality gate within a 1-hour timeout
+                timeout(time: 60, unit: 'MINUTES') {
+                    sh 'sonar-scanner -Dsonar.qualitygate.wait=true'
+                }
+            }
+        }
+
     }
 }
