--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -84,7 +84,7 @@ pipeline {
 
         stage('Login to Docker Registry') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
+                withCredentials([usernamePassword(credentialsId: 'Dockerhub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
                     script {
                         def dockerHubCredentials = "${DOCKERHUB_USERNAME}:${DOCKERHUB_PASSWORD}"
                         sh "echo ${dockerHubCredentials} | docker login --username ${DOCKERHUB_USERNAME} --password-stdin"
@@ -92,6 +92,7 @@ pipeline {
                 }
             }
         }
+
 
         stage('Build auth') {
             steps {
