--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -82,9 +82,10 @@ pipeline {
             }
         }
 
+        stages {
         stage('Login to Docker Registry') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'Dockerhub', usernameVariable: 'nebstephy', passwordVariable: 'Odilia02@')]) {
+                withCredentials([usernamePassword(credentialsId: 'Dockerhub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
                     script {
                         def dockerHubCredentials = "${DOCKERHUB_USERNAME}:${DOCKERHUB_PASSWORD}"
                         sh "echo ${dockerHubCredentials} | docker login --username ${DOCKERHUB_USERNAME} --password-stdin"
@@ -92,6 +93,7 @@ pipeline {
                 }
             }
         }
+
 
 
         stage('Build auth') {
