--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -87,15 +87,16 @@ pipeline {
         }
 
         stage('Login to Docker Registry') {
-            steps {
-                withCredentials([usernamePassword(credentialsId: 'DockerHub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
-                    script {
-                        def dockerHubCredentials = "${DOCKERHUB_USERNAME}:${DOCKERHUB_PASSWORD}"
-                        sh "echo ${dockerHubCredentials} | docker login --username ${DOCKERHUB_USERNAME} --password-stdin"
-                    }
+            withCredentials([usernamePassword(credentialsId: 'DockerHub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
+                script {
+                    def dockerHubUsername = env.DOCKERHUB_USERNAME
+                    def dockerHubPassword = env.DOCKERHUB_PASSWORD
+
+                    sh "echo \$DOCKERHUB_PASSWORD | docker login --username \$DOCKERHUB_USERNAME --password-stdin"
                 }
             }
         }
+
 
 
 
