--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -88,12 +88,14 @@ pipeline {
         }
 
         stage('Login to Docker Registry') {
-            withCredentials([usernamePassword(credentialsId: 'DockerHub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
-                script {
-                    def dockerHubUsername = env.DOCKERHUB_USERNAME
-                    def dockerHubPassword = env.DOCKERHUB_PASSWORD
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'DockerHub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
+                    script {
+                        def dockerHubUsername = env.DOCKERHUB_USERNAME
+                        def dockerHubPassword = env.DOCKERHUB_PASSWORD
 
-                    sh "echo \$DOCKERHUB_PASSWORD | docker login --username \$DOCKERHUB_USERNAME --password-stdin"
+                        sh "echo \$DOCKERHUB_PASSWORD | docker login --username \$DOCKERHUB_USERNAME --password-stdin"
+                    }
                 }
             }
         }
