--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -210,21 +210,21 @@ pipeline {
             }
         }
 
-        stage('warning') {
-            agent {
-                label "Dev"
-            }
-            when {
-                expression {
-                    env.GIT_BRANCH == 'origin/develop'
-                }
-            }
-            steps {
-                script {
-                    notifyUpgrade(currentBuild.currentResult, "WARNING")
-                    sleep(time: env.WARNTIME, unit: "MINUTES")
-                }
-            }
-        }
+        // stage('warning') {
+        //     agent {
+        //         label "Dev"
+        //     }
+        //     when {
+        //         expression {
+        //             env.GIT_BRANCH == 'origin/develop'
+        //         }
+        //     }
+        //     steps {
+        //         script {
+        //             notifyUpgrade(currentBuild.currentResult, "WARNING")
+        //             sleep(time: env.WARNTIME, unit: "MINUTES")
+        //         }
+        //     }
+        // }
     }
 }
