--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -210,8 +210,7 @@ pipeline {
             }
         }
 
-
-        // Other stages for building and pushing Docker images
+        // Add more build and push stages for other services as needed...
 
         stage('warning') {
             agent {
@@ -231,7 +230,7 @@ pipeline {
         }
 
         stage('Generate-compose') {
-	      agent { 
+            agent { 
                 label "Jenkins-Agent-Dev"
             }
             when{ 
@@ -239,152 +238,154 @@ pipeline {
                     env.GIT_BRANCH == 'origin/develop'
                 }
             }
-	        steps {
-	            script {
-	                withCredentials([
-	                    string(credentialsId: 'WEATHERAPP_MYSQL_ROOT_PASSWORD', variable: 'WEATHERAPP_MYSQL_ROOT_PASSWORD'),
-	                    string(credentialsId: 'WEATHERAPP_REDIS_PASSWORD', variable: 'WEATHERAPP_REDIS_PASSWORD'),
-	                    string(credentialsId: 'WEATHERAPP_DB_PASSWORD', variable: 'WEATHERAPP_DB_PASSWORD'),
-	                    string(credentialsId: 'WEATHERAPP_APIKEY', variable: 'WEATHERAPP_APIKEY')
-	                ]) {
+            steps {
+                script {
+                    withCredentials([
+                        string(credentialsId: 'WEATHERAPP_MYSQL_ROOT_PASSWORD', variable: 'WEATHERAPP_MYSQL_ROOT_PASSWORD'),
+                        string(credentialsId: 'WEATHERAPP_REDIS_PASSWORD', variable: 'WEATHERAPP_REDIS_PASSWORD'),
+                        string(credentialsId: 'WEATHERAPP_DB_PASSWORD', variable: 'WEATHERAPP_DB_PASSWORD'),
+                        string(credentialsId: 'WEATHERAPP_APIKEY', variable: 'WEATHERAPP_APIKEY')
+                    ]) {
 
-	                    sh '''
-cat <<EOF > docker-compose.yml
-version: '3.5'
-services:
-  db:
-    container_name: weatherapp-db
-    image: nebstephy/weatherapp-db:${BUILD_NUMBER}
-    environment:
-      MYSQL_ROOT_PASSWORD: ${WEATHERAPP_MYSQL_ROOT_PASSWORD}
-    volumes:
-      - db-data:/var/lib/mysql
-    networks:   
-      - weatherapp
-    restart: always
+                        sh '''
+                            cat <<EOF > docker-compose.yml
+                            version: '3.5'
+                            services:
+                              db:
+                                container_name: weatherapp-db
+                                image: nebstephy/weatherapp-db:${BUILD_NUMBER}
+                                environment:
+                                  MYSQL_ROOT_PASSWORD: ${WEATHERAPP_MYSQL_ROOT_PASSWORD}
+                                volumes:
+                                  - db-data:/var/lib/mysql
+                                networks:   
+                                  - weatherapp
+                                restart: always
 
-  redis:
-    container_name: weatherapp-redis
-    image: nebstephy/weatherapp-redis:${BUILD_NUMBER}
-    networks:
-      - weatherapp
-    environment:
-      REDIS_USER: redis
-      REDIS_PASSWORD: ${WEATHERAPP_REDIS_PASSWORD}
-    volumes:
-      - redis-data:/data
-    restart: always
+                              redis:
+                                container_name: weatherapp-redis
+                                image: nebstephy/weatherapp-redis:${BUILD_NUMBER}
+                                networks:
+                                  - weatherapp
+                                environment:
+                                  REDIS_USER: redis
+                                  REDIS_PASSWORD: ${WEATHERAPP_REDIS_PASSWORD}
+                                volumes:
+                                  - redis-data:/data
+                                restart: always
 
-  weather:
-    container_name: weatherapp-weather
-    image: nebstephy/weatherapp-weather:${BUILD_NUMBER}
-    expose:
-      - 5000
-    environment:
-      APIKEY: ${WEATHERAPP_APIKEY}
-    networks:
-      - weatherapp
-    restart: always
-    depends_on:
-      - db
-      - redis  # Weather depends on both db and redis
+                              weather:
+                                container_name: weatherapp-weather
+                                image: nebstephy/weatherapp-weather:${BUILD_NUMBER}
+                                expose:
+                                  - 5000
+                                environment:
+                                  APIKEY: ${WEATHERAPP_APIKEY}
+                                networks:
+                                  - weatherapp
+                                restart: always
+                                depends_on:
+                                  - db
+                                  - redis  # Weather depends on both db and redis
 
-  auth:
-    container_name: weatherapp-auth
-    image: nebstephy/weatherapp-auth:${BUILD_NUMBER}
-    environment:
-      DB_HOST: db
-      DB_PASSWORD: ${WEATHERAPP_DB_PASSWORD}
-    expose:
-      - 8080
-    networks:
-      - weatherapp
-    restart: always
-    depends_on:
-      - weather  # Auth depends on the weather service
+                              auth:
+                                container_name: weatherapp-auth
+                                image: nebstephy/weatherapp-auth:${BUILD_NUMBER}
+                                environment:
+                                  DB_HOST: db
+                                  DB_PASSWORD: ${WEATHERAPP_DB_PASSWORD}
+                                expose:
+                                  - 8080
+                                networks:
+                                  - weatherapp
+                                restart: always
+                                depends_on:
+                                  - weather  # Auth depends on the weather service
 
-  ui:
-    container_name: weatherapp-ui
-    image: nebstephy/weatherapp-ui:${BUILD_NUMBER}
-    environment:
-     AUTH_HOST: auth
-     AUTH_PORT: 8080
-     WEATHER_HOST: weather
-     WEATHER_PORT: 5000
-     REDIS_USER: redis
-     REDIS_PASSWORD: ${WEATHERAPP_REDIS_PASSWORD}
-    expose:
-      - 3000
-    ports:
-      - 3000:3000
-    networks:
-      - weatherapp
-    restart: always
-    depends_on:
-      - auth  # UI depends on Auth
+                              ui:
+                                container_name: weatherapp-ui
+                                image: nebstephy/weatherapp-ui:${BUILD_NUMBER}
+                                environment:
+                                  AUTH_HOST: auth
+                                  AUTH_PORT: 8080
+                                  WEATHER_HOST: weather
+                                  WEATHER_PORT: 5000
+                                  REDIS_USER: redis
+                                  REDIS_PASSWORD: ${WEATHERAPP_REDIS_PASSWORD}
+                                expose:
+                                  - 3000
+                                ports:
+                                  - 3000:3000
+                                networks:
+                                  - weatherapp
+                                restart: always
+                                depends_on:
+                                  - auth  # UI depends on Auth
 
-networks:
-  weatherapp:
+                            networks:
+                              weatherapp:
 
-volumes:
-  db-data:
-  redis-data:
-EOF
-	                '''
-	            }
-	        }
-	    }
-    }
-
-    stage('Deploy') {
-	    agent { 
-            label "Jenkins-Agent-Dev"
-        }
-        when{ 
-            expression {
-                env.GIT_BRANCH == 'origin/develop'
+                            volumes:
+                              db-data:
+                              redis-data:
+                            EOF
+                        '''
+                    }
+                }
             }
         }
-        steps {
-            sh '''
-                docker-compose down --remove-orphans || true
-                docker-compose up -d 
-                docker-compose ps 
-            '''
-        }
-    }
 
-    stage('checking deployment') {
-	    agent { 
-            label "Jenkins-Agent-Dev"
-        }
-        when{ 
-            expression {
-                env.GIT_BRANCH == 'origin/develop'
+        stage('Deploy') {
+            agent { 
+                label "Jenkins-Agent-Dev"
+            }
+            when{ 
+                expression {
+                    env.GIT_BRANCH == 'origin/develop'
+                }
+            }
+            steps {
+                sh '''
+                    docker-compose down --remove-orphans || true
+                    docker-compose up -d 
+                    docker-compose ps 
+                '''
             }
         }
-        steps {
-            sh '''
-                bash weatherapp/check.sh
-            '''
-        }
-    }
 
-    stage('checking website') {
-	    agent { 
-            label "Jenkins-Agent-Dev"
-        }
-        when{ 
-            expression {
-                env.GIT_BRANCH == 'origin/develop'
+        stage('checking deployment') {
+            agent { 
+                label "Jenkins-Agent-Dev"
+            }
+            when{ 
+                expression {
+                    env.GIT_BRANCH == 'origin/develop'
+                }
+            }
+            steps {
+                sh '''
+                    bash weatherapp/check.sh
+                '''
             }
         }
-        steps {
-            sh '''
-                sleep 10
-                bash weatherapp/check-login.sh
-            '''
+
+        stage('checking website') {
+            agent { 
+                label "Jenkins-Agent-Dev"
+            }
+            when{ 
+                expression {
+                    env.GIT_BRANCH == 'origin/develop'
+                }
+            }
+            steps {
+                sh '''
+                    sleep 10
+                    bash weatherapp/check-login.sh
+                '''
+            }
         }
+
     }
 
     post {
