--- a/weatherapp/weather/Dockerfile
+++ b/weatherapp/weather/Dockerfile
@@ -3,7 +3,7 @@
 # COPY requirements.txt requirements.txt
 # RUN pip3 install -r requirements.txt
 # COPY . .
-# EXPOSE 5000
+EXPOSE 5000
 # ENTRYPOINT ["python3"]
 # CMD [ "/app/main.py" ]
 FROM devopseasylearning/thomisis-weather:v0.0.1
