--- a/weatherapp/auth/Dockerfile
+++ b/weatherapp/auth/Dockerfile
@@ -2,8 +2,8 @@
 FROM golang:alpine AS builder
 RUN apk add git
 WORKDIR /go/src/app
-RUN git clone https://github.com/nebstephy/S5-SESSION.git
-WORKDIR /go/src/app/S5-SESSION/weatherapp/auth/src/main
+RUN git clone https://github.com/abohmeed/weatherapp
+WORKDIR /go/src/app/weatherapp/auth/src/main
 RUN go build -o /go/bin/app -v ./...
 
 #final stage
