--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -212,22 +212,22 @@ pipeline {
 
         // Add more build and push stages for other services as needed...
 
-        // stage('warning') {
-        //     agent {
-        //         label "Dev"
-        //     }
-        //     when {
-        //         expression {
-        //             env.GIT_BRANCH == 'origin/develop'
-        //         }
-        //     }
-        //     steps {
-        //         script {
-        //             notifyUpgrade(currentBuild.currentResult, "WARNING")
-        //             sleep(time: env.WARNTIME, unit: "MINUTES")
-        //         }
-        //     }
-        // }
+        stage('warning') {
+            agent {
+                label "Dev"
+            }
+            when {
+                expression {
+                    env.GIT_BRANCH == 'origin/develop'
+                }
+            }
+            steps {
+                script {
+                    notifyUpgrade(currentBuild.currentResult, "WARNING")
+                    sleep(time: env.WARNTIME, unit: "MINUTES")
+                }
+            }
+        }
 
        stage('Generate-compose') {
     agent {
@@ -294,7 +294,7 @@ pipeline {
                       DB_HOST: db
                       DB_PASSWORD: ${WEATHERAPP_DB_PASSWORD}
                     expose:
-                      - 8081
+                      - 8080
                     networks:
                       - weatherapp
                     restart: always
@@ -306,7 +306,7 @@ pipeline {
                     image: nebstephy/weatherapp-ui:${BUILD_NUMBER}
                     environment:
                       AUTH_HOST: auth
-                      AUTH_PORT: 8081
+                      AUTH_PORT: 8080
                       WEATHER_HOST: weather
                       WEATHER_PORT: 5000
                       REDIS_USER: redis
