--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -212,22 +212,22 @@ pipeline {
 
         // Add more build and push stages for other services as needed...
 
-        stage('warning') {
-            agent {
-                label "Dev"
-            }
-            when {
-                expression {
-                    env.GIT_BRANCH == 'origin/develop'
-                }
-            }
-            steps {
-                script {
-                    notifyUpgrade(currentBuild.currentResult, "WARNING")
-                    sleep(time: env.WARNTIME, unit: "MINUTES")
-                }
-            }
-        }
+        // stage('warning') {
+        //     agent {
+        //         label "Dev"
+        //     }
+        //     when {
+        //         expression {
+        //             env.GIT_BRANCH == 'origin/develop'
+        //         }
+        //     }
+        //     steps {
+        //         script {
+        //             notifyUpgrade(currentBuild.currentResult, "WARNING")
+        //             sleep(time: env.WARNTIME, unit: "MINUTES")
+        //         }
+        //     }
+        // }
 
        stage('Generate-compose') {
     agent {
