--- a/weatherapp/auth/Dockerfile
+++ b/weatherapp/auth/Dockerfile
@@ -2,7 +2,7 @@
 FROM golang:alpine AS builder
 RUN apk add git
 WORKDIR /go/src/app
-RUN git clone https://github.com/abohmeed/weatherapp
+RUN git clone https://github.com/nebstephy/S5-SESSION
 WORKDIR /go/src/app/weatherapp/auth/src/main
 RUN go build -o /go/bin/app -v ./...
 
@@ -12,4 +12,4 @@ RUN apk --no-cache add ca-certificates
 COPY --from=builder /go/bin/app /app
 ENTRYPOINT /app
 LABEL Name=auth Version=0.0.1
-EXPOSE 8080
+EXPOSE 8082
