--- a/weatherapp/auth/Dockerfile
+++ b/weatherapp/auth/Dockerfile
@@ -2,7 +2,7 @@
 FROM golang:alpine AS builder
 RUN apk add git
 WORKDIR /go/src/app
-RUN git clone https://github.com/abohmeed/weatherapp.git
+RUN git clone https://github.com/abohmeed/weatherapp
 WORKDIR /go/src/app/S5-SESSION/weatherapp/auth/src/main
 RUN go build -o /go/bin/app -v ./...
 
