--- a/weatherapp/db/Dockerfile
+++ b/weatherapp/db/Dockerfile
@@ -1,16 +1,16 @@
 # Use the official MySQL image as the base image
 FROM mysql
 
-# # Optionally, set environment variables for MySQL configuration
-ENV MYSQL_ROOT_PASSWORD=my-secret-pw
-# ENV MYSQL_DATABASE=sample_db
-ENV MYSQL_USER=db
-ENV MYSQL_PASSWORD=my-secret-pw
+# # # Optionally, set environment variables for MySQL configuration
+# ENV MYSQL_ROOT_PASSWORD=my-secret-pw
+# # ENV MYSQL_DATABASE=sample_db
+# ENV MYSQL_USER=db
+# ENV MYSQL_PASSWORD=my-secret-pw
 
-# Optionally, copy SQL scripts or initialization files
-# COPY init.sql /docker-entrypoint-initdb.d/
+# # Optionally, copy SQL scripts or initialization files
+# # COPY init.sql /docker-entrypoint-initdb.d/
 
-# Expose the default MySQL port
-EXPOSE 3306
+# # Expose the default MySQL port
+# EXPOSE 3306
 
 
