--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -391,11 +391,11 @@ EOF
 
     }
 
-    // post {
-    //     always {
-    //         script {
-    //             notifyUpgrade(currentBuild.currentResult, "POST")
-    //         }
-    //     }
-    // }
+    post {
+        always {
+            script {
+                notifyUpgrade(currentBuild.currentResult, "POST")
+            }
+        }
+    }
 }
