--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -404,8 +404,10 @@ EOF
             }
         }
 
-    }
 
+
+    }
+}
     post {
         always {
             script {
@@ -413,4 +415,33 @@ EOF
             }
         }
     }
+    def notifyUpgrade(String buildResult, String whereAt) {
+  if (Please_leave_this_section_as_it_is == 'origin/develop') {
+    channel = 'jenkins-project-'
+  } else {
+    channel = 'jenkins-project-'
+  }
+  if (buildResult == "SUCCESS") {
+    switch(whereAt) {
+      case 'WARNING':
+        slackSend(channel: channel,
+                color: "#439FE0",
+                message: "The_weather_app_S5: Upgrade starting in ${env.WARNTIME} minutes @ ${env.BUILD_URL}  Application The_weather_app_S5")
+        break
+    case 'STARTING':
+      slackSend(channel: channel,
+                color: "good",
+                message: "The_weather_app_S5: Starting upgrade @ ${env.BUILD_URL} Application The_weather_app_S5")
+      break
+    default:
+        slackSend(channel: channel,
+                color: "good",
+                message: "The_weather_app_S5: Upgrade completed successfully @ ${env.BUILD_URL}  Application The_weather_app_S5")
+        break
+    }
+  } else {
+    slackSend(channel: channel,
+              color: "danger",
+              message: "The_weather_app_S5: Upgrade was not successful. Please investigate it immediately.  @ ${env.BUILD_URL}  Application The_weather_app_S5")
+  }
 }
